--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.currency-dd {
+  border: none;
+  color: white;
+  background-color: #93e499;
+  border-radius: 20px;
+  padding: 10px;
+}
